// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusLight API 1`] = `
.c0 {
  width: 12px;
}

.c0 > * {
  fill: #D1D2D3;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

<StatusLight
  color="grayBase"
>
  <StatusLight__Svg
    color="grayBase"
    viewBox="0 0 20 20"
  >
    <StyledComponent
      color="grayBase"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "StatusLight__Svg-lwy0gd-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  width: 12px;

  > * {
    fill: ",
              [Function],
              ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
            ],
          },
          "displayName": "StatusLight__Svg",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "StatusLight__Svg-lwy0gd-0",
          "target": "svg",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      viewBox="0 0 20 20"
    >
      <svg
        className="c0"
        color="grayBase"
        viewBox="0 0 20 20"
      >
        <circle
          cx="10"
          cy="10"
          r="10"
        />
      </svg>
    </StyledComponent>
  </StatusLight__Svg>
</StatusLight>
`;

exports[`Storyshots StatusLight Custom width 1`] = `
.c1 {
  width: 12px;
}

.c1 > * {
  fill: #F39A1E;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c0 {
  width: 100px;
}

<StatusLightexample__StyledStatusLight
  color="warning"
>
  <StyledComponent
    color="warning"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "StatusLightexample__StyledStatusLight-sc-901ayv-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "
  width: 100px;
",
          ],
        },
        "displayName": "StatusLightexample__StyledStatusLight",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "StatusLightexample__StyledStatusLight-sc-901ayv-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <StatusLight
      className="c0"
      color="warning"
    >
      <StatusLight__Svg
        className="c0"
        color="warning"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          className="c0"
          color="warning"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c1",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c0 c1"
            color="warning"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
  </StyledComponent>
</StatusLightexample__StyledStatusLight>
`;

exports[`Storyshots StatusLight With color props 1`] = `
.c2 {
  width: 12px;
}

.c2 > * {
  fill: #D1D2D3;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c0 {
  width: 12px;
}

.c0 > * {
  fill: #353630;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c1 {
  width: 12px;
}

.c1 > * {
  fill: #999A94;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c3 {
  width: 12px;
}

.c3 > * {
  fill: #FAFAFA;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c4 {
  width: 12px;
}

.c4 > * {
  fill: #FFFFFF;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c5 {
  width: 12px;
}

.c5 > * {
  fill: #00A1DE;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c6 {
  width: 12px;
}

.c6 > * {
  fill: #69BE28;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c7 {
  width: 12px;
}

.c7 > * {
  fill: #F5364E;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

.c8 {
  width: 12px;
}

.c8 > * {
  fill: #F39A1E;
  -webkit-transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: fill cubic-bezier(0.47,0,0.75,0.72) 0.3s;
}

<div>
  <div
    key="black"
  >
    <StatusLight
      color="black"
    >
      <StatusLight__Svg
        color="black"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="black"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c0"
            color="black"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    black
  </div>
  <div
    key="grayDark"
  >
    <StatusLight
      color="grayDark"
    >
      <StatusLight__Svg
        color="grayDark"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="grayDark"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c1"
            color="grayDark"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    grayDark
  </div>
  <div
    key="grayBase"
  >
    <StatusLight
      color="grayBase"
    >
      <StatusLight__Svg
        color="grayBase"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="grayBase"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c2"
            color="grayBase"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    grayBase
  </div>
  <div
    key="grayLight"
  >
    <StatusLight
      color="grayLight"
    >
      <StatusLight__Svg
        color="grayLight"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="grayLight"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c3"
            color="grayLight"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    grayLight
  </div>
  <div
    key="white"
  >
    <StatusLight
      color="white"
    >
      <StatusLight__Svg
        color="white"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="white"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c4"
            color="white"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    white
  </div>
  <div
    key="default"
  >
    <StatusLight
      color="default"
    >
      <StatusLight__Svg
        color="default"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="default"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c3"
            color="default"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    default
  </div>
  <div
    key="primary"
  >
    <StatusLight
      color="primary"
    >
      <StatusLight__Svg
        color="primary"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="primary"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c5"
            color="primary"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    primary
  </div>
  <div
    key="success"
  >
    <StatusLight
      color="success"
    >
      <StatusLight__Svg
        color="success"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="success"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c6"
            color="success"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    success
  </div>
  <div
    key="error"
  >
    <StatusLight
      color="error"
    >
      <StatusLight__Svg
        color="error"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="error"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c7"
            color="error"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    error
  </div>
  <div
    key="warning"
  >
    <StatusLight
      color="warning"
    >
      <StatusLight__Svg
        color="warning"
        viewBox="0 0 20 20"
      >
        <StyledComponent
          color="warning"
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "StatusLight__Svg-lwy0gd-0",
                "isStatic": false,
                "lastClassName": "c8",
                "rules": Array [
                  "
  width: 12px;

  > * {
    fill: ",
                  [Function],
                  ";
    transition: fill cubic-bezier(0.47, 0, 0.75, 0.72) 0.3s;
  }
",
                ],
              },
              "displayName": "StatusLight__Svg",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "StatusLight__Svg-lwy0gd-0",
              "target": "svg",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          viewBox="0 0 20 20"
        >
          <svg
            className="c8"
            color="warning"
            viewBox="0 0 20 20"
          >
            <circle
              cx="10"
              cy="10"
              r="10"
            />
          </svg>
        </StyledComponent>
      </StatusLight__Svg>
    </StatusLight>
    warning
  </div>
</div>
`;
